2000-02-22  Ettore Perazzoli  <ettore@helixcode.com>

	* gtkhtml.c (key_press_event): Do not update styles if the
	keypress was not handled.
	(update_styles): Kick me.

	* htmlengine-edit-fontstyle.c
	(html_engine_get_current_insertion_font_style): A
	`GTK_HTML_FONT_STYLE_DEFAULT' is always overridden by the
	element's font style.

	* gtkhtml.c (class_init): Set up signal
	"insertion_font_style_changed".
	(update_styles): Deal with the font style too.

	* gtkhtml.h: New signal "insertion_font_style_changed".  New
	member `insertion_font_style'.

2000-02-21  Ettore Perazzoli  <ettore@helixcode.com>

	* htmlengine.c (html_engine_update_event): Do not draw if the
	painter is not realized.  This is a quick and dirty fix, I am not
	sure what is going on in here.

	* htmlgdkpainter.c (html_gdk_painter_realized): New function.

	* htmltext.c (check_merge): New function, implementation of
	`HTMLText::check_merge'.
	(html_text_class_init): Install it.

	* htmltext.h: New virtual method `HTMLText::check_merge'.

	* htmlengine-edit-fontstyle.c (html_engine_set_font_style):
	Changed parameters: get an AND mask and an OR mask for modifying
	the style.
	(set_font_style_in_selection_forall): Use a SetFontStyleForallData
	closure, so that we can store both masks.
	(set_font_style_in_selection): Likewise.
	* gtkhtml.c (gtk_html_set_font_style): Likewise.

	* htmltextmaster.c (merge): Completed code to preserve selection
	when merging.
	(split): Preserve selection here too.

	* htmlengine-edit-fontstyle.c
	(set_font_style_in_selection_forall): Make it work.

	* htmlembedded.c (html_embedded_grab_cursor): Removed spurious
	debugging message.

	* gtkhtml.c (gtk_html_allow_selection): New function.
	(init): Initialize `allow_selection' to TRUE.
	(button_press_event): Do not grab the pointer if `allow_selection'
	is FALSE.
	(realize): Removed spurious `g_message()'.

	* gtkhtml.h: New member `allow_selection'.

	* htmllinktext.c (html_link_text_new): Get rid of some