@@ -22,6 +22,7 @@
 
 #include <gdk/gdk.h>
 #include "htmlsettings.h"
+#include <string.h>
 
 
 static const int defaultFontSizes[HTML_NUM_FONT_SIZES] = { 8, 10, 12, 14, 18, 24, 32 };
