@@ -1,3 +1,7 @@
+2000-02-22 Elliot Lee  <sopwith@redhat.com>
+	* htmlimageinput.c, htmllinktext.c, htmlselect.c, htmlsettings.c,
+	  htmltable.c, htmltextarea.c: #include <string.h>
+
 2000-02-22  Ettore Perazzoli  <ettore@helixcode.com>
 
 	* gtkhtml.c (key_press_event): Do not update styles if the
